# nand2tetris

./: .gitignore  LICENSE  README.md
projects/01/: And.hdl  And16.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux16.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Not.hdl  Not16.hdl  Or.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl
projects/02/: ALU.hdl  Add16.hdl  FullAdder.hdl  HalfAdder.hdl  Inc16.hdl
projects/03/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl  Register.hdl
projects/03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
projects/04/fill/: Fill.asm
projects/04/mult/: Mult.asm
projects/05/: CPU.hdl  Computer.hdl  Memory.hdl
projects/06/assembler/: CMakeLists.txt  code.cpp  code.h  commandType.cpp  commandType.h  main.cpp  parser.cpp  parser.h  symbolTable.cpp  symbolTable.h  test.asm  tests.cpp
projects/06/assembler/src/: code.py  main.py  parser.py  symbolTable.py  utils.py
projects/06/assembler/test/: parser-test.py  test.py
projects/07/translator/: CMakeLists.txt  codeWriter.cpp  codeWriter.h  main.cpp  parser.cpp  parser.h  parser.py  test.vm  tests.py  utils.py
projects/08/translator/: CMakeLists.txt  codeWriter.cpp  codeWriter.h  commandType.h  main.cpp  parser.cpp  tests.cpp
